<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightSalmon"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/input_login"
        android:gravity="center"
        android:inputType="text"
        android:nextFocusDown="@id/inputEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:hint="@string/input_email"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:nextFocusDown="@id/inputPassword"
        app:layout_constraintTop_toTopOf="@id/inputLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:gravity="center"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_toUsernameFragment"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>