<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/salmon"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/loginView"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/emailView"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="@id/loginView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="@id/emailView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>